--- a/employee-manager/public/manifest.json
+++ b/employee-manager/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Employee Manager",
+  "name": "React employee manager",
   "icons": [
     {
       "src": "favicon.ico",
